implemented peaksData (and peaksVariables)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,7 @@ importClassesFrom(RSQLite,SQLiteConnection)
 importClassesFrom(Spectra,MsBackend)
 importMethodsFrom(Spectra,backendInitialize)
 importMethodsFrom(Spectra,dataStorage)
+importMethodsFrom(Spectra,peaksData)
+importMethodsFrom(Spectra,peaksVariables)
 importMethodsFrom(Spectra,spectraData)
 importMethodsFrom(Spectra,spectraVariables)
