tests for isEmpty, some work and tests on zero-handling for read_blob

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ importClassesFrom(RSQLite,SQLiteConnection)
 importClassesFrom(Spectra,MsBackend)
 importMethodsFrom(Spectra,backendInitialize)
 importMethodsFrom(Spectra,dataStorage)
+importMethodsFrom(Spectra,isEmpty)
+importMethodsFrom(Spectra,lengths)
 importMethodsFrom(Spectra,peaksData)
 importMethodsFrom(Spectra,peaksVariables)
 importMethodsFrom(Spectra,spectraData)
