--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,28 @@ export(constant)
 export(fast_replace_nan)
 importClassesFrom(RSQLite,SQLiteConnection)
 importClassesFrom(Spectra,MsBackend)
+importMethodsFrom(Spectra,acquisitionNum)
 importMethodsFrom(Spectra,backendInitialize)
+importMethodsFrom(Spectra,centroided)
+importMethodsFrom(Spectra,collisionEnergy)
+importMethodsFrom(Spectra,dataOrigin)
 importMethodsFrom(Spectra,dataStorage)
+importMethodsFrom(Spectra,intensity)
 importMethodsFrom(Spectra,isEmpty)
+importMethodsFrom(Spectra,isolationWindowLowerMz)
+importMethodsFrom(Spectra,isolationWindowTargetMz)
+importMethodsFrom(Spectra,isolationWindowUpperMz)
+importMethodsFrom(Spectra,msLevel)
+importMethodsFrom(Spectra,mz)
 importMethodsFrom(Spectra,peaksData)
 importMethodsFrom(Spectra,peaksVariables)
+importMethodsFrom(Spectra,polarity)
+importMethodsFrom(Spectra,precScanNum)
+importMethodsFrom(Spectra,precursorCharge)
+importMethodsFrom(Spectra,precursorIntensity)
+importMethodsFrom(Spectra,precursorMz)
+importMethodsFrom(Spectra,rtime)
+importMethodsFrom(Spectra,scanIndex)
+importMethodsFrom(Spectra,smoothed)
 importMethodsFrom(Spectra,spectraData)
 importMethodsFrom(Spectra,spectraVariables)
