Fixed missing imports and updated DESCRIPTION

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(constant)
 export(fast_replace_nan)
 importClassesFrom(RSQLite,SQLiteConnection)
 importClassesFrom(Spectra,MsBackend)
+importFrom(DBI,dbIsValid)
+importFrom(IRanges,NumericList)
 importMethodsFrom(Spectra,acquisitionNum)
 importMethodsFrom(Spectra,backendInitialize)
 importMethodsFrom(Spectra,centroided)
