--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ importClassesFrom(RSQLite,SQLiteConnection)
 importClassesFrom(Spectra,MsBackend)
 importFrom(DBI,dbIsValid)
 importFrom(IRanges,NumericList)
+importMethodsFrom(Spectra,"$")
+importMethodsFrom(Spectra,"[")
 importMethodsFrom(Spectra,acquisitionNum)
 importMethodsFrom(Spectra,backendInitialize)
 importMethodsFrom(Spectra,centroided)
